--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Anders. It uses data from mapbox.com and darksky.net</p>
             <img class="portrait" src="/img/Regnbuen Live.png">
         </div>
         {{>footer}}
